syntax = "proto3";

message Vector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}
